--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "express",
     "typescript"
   ],
-  "author": "AWS Cloud Club VIT Chennai",
+  "author": "dev25bansal-ops",
   "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
